2007-07-03  Brian Warner  <warner@lothar.com>

	* buildbot/test/runutils.py (RunMixin.disappearSlave): oops, add
	an allowReconnect= argument to let callers control whether they
	want this don't-let-it-reconnect behavior, since some tests care.
	Factor out the .continueTrying=False lines from those callers.
	* buildbot/test/test_slaves.py: same
	* buildbot/test/test_run.py: same

2007-07-02  Brian Warner  <warner@lothar.com>

	* buildbot/test/runutils.py (RunMixin.disappearSlave): once a
	slave has been disappeared, don't let it reconnect. This was
	causing an intermittent failure in test_slaves.py, when the slave
	that was supposed to be gone managed to come back by the end of
	the test and affect the count.
	* buildbot/test/test_slaves.py (Slave.testFallback2): minor
	refactorings
	* buildbot/process/builder.py (SlaveBuilder.__repr__): added some
	diagnostic messages to track down this problem
	(Builder.startBuild): same

	* buildbot/process/builder.py (Builder.maybeStartBuild): choose
	the slave randomly rather than always taking the first one. Thanks
	to Pike for the patch. Closes #36.
	* buildbot/test/test_slaves.py: match the change. to avoid huge
	changes to the tests, I added a CHOOSE_SLAVES_RANDOMLY flag which
	enables/disables the round-robin-ness (enabled by default), and
	some unit tests disable it.
	* docs/buildbot.texinfo (Buildmaster Architecture): document it

	* buildbot/slave/bot.py (BuildSlave.__init__): rename the 'host'
	argument to 'buildmaster_host', to make it more obvious that this
	points to the buildmaster. Thanks to Bob Proulx for the
	suggestion.
	* buildbot/scripts/runner.py (slaveTAC): same
	* buildbot/test/test_runner.py (Create.testSlave): match the change

	* contrib/hg_buildbot.py: patch from Frederic Leroy to make this
	work better.

2007-06-17  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_config.py (Factories.testAllSteps): make sure
	we can round-trip all of our current step classes by calling